<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    android:background="@color/default_color"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="48dp"
        android:id="@+id/card_area"
        android:background="@color/white"

        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"></LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/name_req"
                android:layout_weight="1"
                android:text="john"
                android:textColor="@color/black"/>
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:rating="3"
                android:numStars="5"
                android:stepSize="1"
                style="?android:attr/ratingBarStyleSmall"

                android:progressDrawable="@drawable/active_star_icon"
                android:indeterminateDrawable="@drawable/star_grey"
                android:id="@+id/my_stars"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"/>

            
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:src="@drawable/location_icon_small"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"

                android:text="@string/adrs"
                android:lines="2"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/show"
                style="@style/half_curve_button"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:gravity="center"
            android:drawableLeft="@drawable/time_icon_small"
            android:text="@string/time_left"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="2">
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:src="@drawable/reviewa_icon_small"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:lines="2"
                android:layout_weight="5"
                android:text="@string/long_txt"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"></LinearLayout>




    </LinearLayout>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:elevation="5dp"
        android:layout_centerHorizontal="true"
        app:border_width="10dp"
        app:border_color="@color/default_color"
        android:src="@drawable/paris_bg" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/half_century"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        >
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:background="@drawable/request_recycler_green_button"
            android:text="@string/acpt"
            android:textColor="@color/white"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/request_recycler_red_button"
            android:text="@string/rjct"
            android:textColor="@color/white"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>


    </LinearLayout>


</RelativeLayout>